[package]
name = "omnifs-home"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "omnifs home directory layout and path resolution"
categories = ["filesystem"]
keywords = ["omnifs", "filesystem", "paths"]

[dependencies]
omnifs-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
