[package]
name = "omnifs-host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Host runtime for the omnifs virtual filesystem with WASM provider support"
categories = ["filesystem", "wasm"]
keywords = ["omnifs", "fuse", "wasm", "wasmtime", "filesystem"]

[dependencies]
wasmtime = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
reqwest-oauth2 = { package = "reqwest", version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
libc = { workspace = true }
anyhow = { workspace = true }
dirs-next = "2"
futures = "0.3"
gix = { version = "0.72", default-features = false, features = ["blocking-network-client"] }
url = "2"
wasmtime-wasi = { version = "43", default-features = false, features = ["p2"] }
moka = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
omnifs-core = { workspace = true }
omnifs-home = { workspace = true }
omnifs-mount = { workspace = true }
omnifs-provider = { workspace = true }
omnifs-cache = { workspace = true }
omnifs-auth = { workspace = true }
omnifs-creds = { workspace = true }
omnifs-inspector = { workspace = true }
omnifs-wit = { workspace = true, features = ["host-bindings"] }
arc-swap = { workspace = true }
async_singleflight = { workspace = true }
crossbeam-queue = "0.3"
secrecy = "0.10"
time = { workspace = true, features = ["formatting"] }

[dev-dependencies]
http = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
wasmtime = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
zip = { workspace = true }
rcgen = "0.13"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
omnifs-itest = { path = "../omnifs-itest" }

[lints]
workspace = true
