[package]
name = "omnifs-itest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Centralized integration tests and harnesses for omnifs providers"

[dependencies]
omnifs-api = { workspace = true }
omnifs-engine = { workspace = true }
omnifs-wit = { path = "../omnifs-wit", features = ["host-bindings"] }
omnifs-core = { path = "../omnifs-core" }
omnifs-workspace = { workspace = true }
omnifs-nfs = { workspace = true }
wasmtime = { workspace = true }
tempfile = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true, features = ["formatting"] }
secrecy = "0.10"
rusqlite = { version = "0.36", features = ["bundled"] }
base64 = "0.22"
hickory-proto = "0.26"
insta = "1"

[lints]
workspace = true
