[package]
name = "omnifs-libkrun"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Private libkrun launcher for the Omnifs frontend guest"
publish = false

[[bin]]
name = "omnifs-libkrun"
path = "src/main.rs"

[dependencies]
libc = { workspace = true }
libloading = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
