[package]
name = "omnifs-mount-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Wire types for the omnifs.provider-manifest.v1 custom section"
categories = ["filesystem", "wasm"]
keywords = ["omnifs", "wasm", "wit", "schema", "fuse"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
wasmparser = "0.246"

[dev-dependencies]
anyhow = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
