[package]
name = "omnifs-mount"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The omnifs mount: Spec/Resolved, the mount-spec Registry, and Spec->Resolved resolution"
categories = ["filesystem", "wasm"]
keywords = ["omnifs", "wasm", "wit", "schema", "fuse"]

[dependencies]
omnifs-core = { workspace = true }
omnifs-caps = { workspace = true }
omnifs-provider = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }

[package.metadata.dist]
dist = false

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
