[package]
name = "omnifs-namespace-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Length-delimited postcard wire for the omnifs namespace surface"
categories = ["filesystem"]
keywords = ["omnifs", "namespace", "wire", "postcard", "filesystem"]

[dependencies]
omnifs-engine = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { workspace = true }
thiserror = { workspace = true }
constant_time_eq = "0.4"

# The guest-side vsock dial for the krunkit frontend backend. Linux-only: the
# krunkit guest is Linux, and the crate's socket(AF_VSOCK, ...) call does not
# build on a non-Linux host in the first place.
[target.'cfg(target_os = "linux")'.dependencies]
tokio-vsock = "0.7.2"

[dev-dependencies]
tempfile = { workspace = true }
# For a real engine-backed `TreeNamespace` in the trace-propagation test: no
# cycle, omnifs-itest does not depend on omnifs-namespace-wire.
omnifs-itest = { path = "../omnifs-itest" }
# For InspectorEvent/InspectorRecord in the same test: the inspector wire
# types live in omnifs-api, not re-exported by omnifs-engine.
omnifs-api = { workspace = true }

[lints]
workspace = true
