[package]
name = "omnifs-nfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Read-only NFSv4.0 loopback frontend for omnifs"
categories = ["filesystem"]
keywords = ["omnifs", "nfs", "filesystem"]

[dependencies]
omnifs-core = { workspace = true }
omnifs-mtab = { workspace = true }
omnifs-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
getrandom = "0.3"

[dev-dependencies]
omnifs-workspace = { workspace = true }
omnifs-wit = { workspace = true, features = ["host-bindings"] }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
