[package]
name = "omnifs-nfs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Read-only NFSv4.0 loopback frontend for omnifs"
categories = ["filesystem"]
keywords = ["omnifs", "nfs", "filesystem"]

[[bin]]
name = "omnifs-nfs"
path = "src/bin/omnifs_nfs.rs"
required-features = ["bin"]

[dependencies]
omnifs-core = { workspace = true }
omnifs-mtab = { workspace = true }
omnifs-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
getrandom = "0.3"

# Runner-only dependencies. Library consumers do not need argument parsing,
# VFS attach transport, or subscriber setup.
anyhow = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
omnifs-vfs-wire = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
default = ["bin"]
bin = ["dep:anyhow", "dep:clap", "dep:omnifs-vfs-wire", "dep:tracing-subscriber"]

[dev-dependencies]
omnifs-engine = { workspace = true, features = ["runtime"] }
omnifs-workspace = { workspace = true }
omnifs-wit = { workspace = true, features = ["host-bindings"] }
tempfile = { workspace = true }

[lints]
workspace = true
