[package]
name = "omnifs-provider"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Provider contract: manifest, custom-section codec, route resolution, and auth-scheme model"
categories = ["filesystem", "wasm"]
keywords = ["omnifs", "wasm", "wit", "schema", "fuse"]

[dependencies]
omnifs-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
schemars = { workspace = true, features = ["indexmap2"] }
jsonschema = { workspace = true }
indexmap = { workspace = true }
wasmparser = "0.246"
thiserror = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }

[[bin]]
name = "dump-provider"
path = "src/bin/dump_provider.rs"

[package.metadata.dist]
dist = false

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
