[package]
name = "omnifs-release"
description = "Maintainer tooling to prepare and validate omnifs product releases"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[[bin]]
name = "omnifs-release"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
toml_edit = "0.22"

[lints]
workspace = true
