[package]
name = "omnifs-sdk-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for the omnifs provider SDK"
categories = ["development-tools::procedural-macro-helpers", "wasm"]
keywords = ["omnifs", "macros", "wasm", "wit", "sdk"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
omnifs-mount-schema = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Path-only (no `version` field) so `cargo publish` drops this dev-dep
# entry and breaks the sdk <-> sdk-macros publish cycle. Local trybuild
# tests still resolve via the path. Dev-deps don't propagate to
# consumers, so dropping it on the published manifest is harmless.
omnifs-sdk = { workspace = true }
tokio = { workspace = true }
trybuild = "1"
serde = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
