[package]
name = "omnifs-sdk-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macros for the omnifs provider SDK"
categories = ["development-tools::procedural-macro-helpers", "wasm"]
keywords = ["omnifs", "macros", "wasm", "wit", "sdk"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
omnifs-provider = { workspace = true }
omnifs-caps = { workspace = true }
serde_json = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
